# gooddata-legacy2cloud

./: .copyrightignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  pyproject.toml
.aida/: .gitignore  change_domains.yaml  git_policy.yaml  validation_policy.yaml  validation_registry.yaml
.aida/rules/: architecture.mdc  backends.mdc  coding_standards.mdc  conversation.mdc  documentation.mdc  migration_scripts.mdc  modules.mdc  testing.mdc
.claude/: CLAUDE.md
.claude/rules/: architecture.md  backends.md  coding_standards.md  conversation.md  documentation.md  git_policy.md  migration_scripts.md  testing.md
.cursor/rules/: aida.mdc  architecture.mdc  backends.mdc  coding_standards.mdc  conversation.mdc  documentation.mdc  git_policy.mdc  migration_scripts.mdc  testing.mdc
.github/workflows/: python-tests.yaml  release-pypi.yaml  trigger-release.yaml
scripts/: check_copyright.py
src/gooddata_legacy2cloud/: __init__.py  constants.py  helpers.py  (+2 more)
tests/: conftest.py  test_configuration_validation.py  test_dashboards.py  test_filter_context_conversion.py  test_insights.py  test_ldm.py  test_maql_builder_bear.py  test_metrics.py  test_metrics_utils.py  test_panther_dashboard.py  test_panther_filter_context_model.py  test_period_comparison_insight.py  test_pp_dashboards_helpers.py  test_pp_dashboards_migration.py  test_recur_to_cron_translator.py  test_reports.py  test_scheduled_exports.py  test_utils.py
tools/: README.md  legacy_object_dependencies.py  platform_object_dependencies.py
(+492 files in other folders)
