# (C) 2026 GoodData Corporation
[project]
name = "gooddata-platform2cloud"
version = "0.1.0"
requires-python = ">=3.14"
description = "Transfer workspace metadata from GD Platform to GD Cloud."
readme = "README.md"
dependencies = [
    "requests==2.32.5",
    "python-dotenv==1.1.1",
    "tenacity==9.0.0",
    "jinja2==3.1.2",
    "markupsafe==2.1.3",
    "pydantic==2.12.5",
    "types-requests==2.32.4.20250809",
    "gooddata-sdk>=1.61.0",
    "attrs>=24.2.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.5",
    "pre-commit==4.4.0",
    "ty==0.0.20",
    "aida-mcp==0.4.0",
    "pytest==9.0.0",
    "pytest-mock==3.15.1",
]

[tool.ty.src]
include = ["src", "tests"]
exclude = ["scripts"]

[project.scripts]
gooddata-platform2cloud = "gooddata_platform2cloud.arg_parsing.cli_commands:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
